k8s/airflow-postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airflow-postgresql
spec:
  serviceName: "postgresql"
  replicas: 1
  selector:
    matchLabels:
      app: airflow-postgresql
  template:
    metadata:
      labels:
        app: airflow-postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:13
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/airflow-postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgresql-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
