k8s/airflow-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
      component: scheduler
  template:
    metadata:
      labels:
        app: airflow
        component: scheduler
    spec:
      containers:
        - name: scheduler
          image: matheusinit/airflow:latest
          command:
            - "bash"
            - "-c"
            - "airflow scheduler"
          resources:
            requests:
              memory: "0.5G"
              cpu: "500m"
            limits:
              memory: "1G"
              cpu: "1000m"
