k8s/airflow-webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: airflow
      component: webserver
  template:
    metadata:
      name: airflow
      labels:
        app: airflow
        component: webserver
    spec:
      containers:
      - name: airflow
        image: matheusinit/airflow:latest
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "1G"
            cpu: "500m"
          limits:
            memory: "1G"
            cpu: "500m"
