k8s/airflow-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: airflow
      component: worker
  template:
    metadata:
      labels:
        app: airflow
        component: worker
    spec:
      containers:
        - name: worker
          image: matheusinit/airflow:latest
          command:
            - "bash"
            - "-c"
            - "airflow worker"
          resources:
            requests:
              memory: "1G"
              cpu: "500m"
            limits:
              memory: "1G"
              cpu: "500m"
