k8s/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: airflow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tse-analysis
  template:
metadata:
  name: airflow
  labels:
    app: tse-analysis
spec:
  containers:
  - name: airflow
    image: matheusinit/airflow:latest
    readinessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 10
      periodSeconds: 5
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
    resources:
      requests:
        memory: "32Mi"
        cpu: "250m"
      limits:
        memory: "64Mi"
        cpu: "500m"
