k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: airflow
  labels:
    app: tse-analysis
spec:
  containers:
  - name: airflow
    image: matheusinit/airflow:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
    resources:
      requests:
        memory: "32Mi"
        cpu: "250m"
      limits:
        memory: "64Mi"
        cpu: "500m"
