k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tse-analisys-service
spec: 
  type: ClusterIP
  selector:
    app: tse-analisys
  ports:
  - port: 80
    targetPort: 8080
