k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tse-analisys-ingress
spec:
  rules:
  - host: tre.imd.ufrn.br
      http:
      paths:
      - path: /
      pathType: Prefix
      beckend:
        service:
          name: tse-analisys-service
          port:
            number: 80
